--- a/index.html
+++ b/index.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-
-
-    
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+   <section class="top-banner">
+      <div class="half-width">
+      <h1>Welcome TO</h1>
+      <h1><span class="heading-clr">Web Development</span> World</h1>
+      <h3>Lorem ipsum dolor sit amet.</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis maiores
+        molestias quis, sapiente debitis exercitationem vel quia porro est
+        necessitatibus fuga tempore tempora sunt tenetur earum, cum quod
+        accusamus reiciendis.
+      </p>
+      <a href="#" class="btn" target="_blank">Hire Me</a>
+    </div>
+    <div class="half-width">
+      <img src="./images/my-bg.png" alt="" />
+    </div>
+   </section>
+  </body>
 </html>
