--- a/index.html
+++ b/index.html
@@ -14,22 +14,33 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-   <section class="top-banner">
+    <section class="top-banner">
       <div class="half-width">
-      <h1>Welcome TO</h1>
-      <h1><span class="heading-clr">Web Development</span> World</h1>
-      <h3>Lorem ipsum dolor sit amet.</h3>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis maiores
-        molestias quis, sapiente debitis exercitationem vel quia porro est
-        necessitatibus fuga tempore tempora sunt tenetur earum, cum quod
-        accusamus reiciendis.
-      </p>
-      <a href="#" class="btn" target="_blank">Hire Me</a>
-    </div>
-    <div class="half-width">
-      <img src="./images/my-bg.png" alt="" />
-    </div>
-   </section>
+        <h1>Welcome TO</h1>
+        <h1><span class="heading-clr">Web Development</span> World</h1>
+        <h3>Lorem ipsum dolor sit amet.</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis maiores
+          molestias quis, sapiente debitis exercitationem vel quia porro est
+          necessitatibus fuga tempore tempora sunt tenetur earum, cum quod
+          accusamus reiciendis.
+        </p>
+        <a href="#" class="btn" target="_blank">Hire Me</a>
+      </div>
+      <div class="half-width">
+        <img src="./images/my-bg.png" alt="" />
+      </div>
+    </section>
+    <section class="dream-big">
+      <div class="half-width">
+        <img src="./images/bg-1.png" alt="">
+      </div>
+      <div class="half-width">
+        <h1>Dream Big</h1>
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat animi ad nam aut ex. Illum, autem explicabo voluptatem earum repudiandae in hic inventore eius dolores, ipsum quis facilis? Totam, aliquid.</p>
+        <a href="#" class="btn" target="_blank">Download CV</a>
+      </div>
+    </section>
   </body>
 </html>
