--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
       <div class="half-width">
         <h1>Welcome TO</h1>
         <h1><span class="heading-clr">Web Development</span> World</h1>
@@ -31,7 +31,7 @@
         <img src="./images/my-bg.png" alt="" />
       </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
       <div class="half-width">
         <img src="./images/bg-1.png" alt="">
       </div>
@@ -42,5 +42,6 @@
         <a href="#" class="btn" target="_blank">Download CV</a>
       </div>
     </section>
+    
   </body>
 </html>
